--- a/story/static/css/sass/pages/game_page/main.css
+++ b/story/static/css/sass/pages/game_page/main.css
@@ -127,8 +127,9 @@ body {
       transform: scale(0.95) translateY(0.25rem);
       background-color: rgba(245, 255, 250, 0.5);
       box-shadow: inset 1px 2px 1px 1px rgba(0, 0, 0, 0.15); }
-  .button:active {
-    box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.5); }
+    .button:hover .button:active, .button--wrapper:hover .button:active {
+      transform: translateY(3px);
+      box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.5); }
 
 #storyButtonBox:hover .button:not(:hover) {
   transform: scale(0.95) translateY(0.25rem);
